Added new files

--- a/ansible/templates/kube-apiserver.service.j2
+++ b/ansible/templates/kube-apiserver.service.j2
@@ -4,7 +4,8 @@ Documentation=https://github.com/kubernetes/kubernetes
 
 [Service]
 ExecStart=/usr/local/bin/kube-apiserver \
-  --advertise-address={{ansible_eth1.ipv4.address}} \
+#  --advertise-address={{ansible_eth1.ipv4.address}} \
+  --advertise-address=0.0.0.0 \
   --allow-privileged=true \
   --apiserver-count=3 \
   --audit-log-maxage=30 \
@@ -13,8 +14,8 @@ ExecStart=/usr/local/bin/kube-apiserver \
   --log-dir=/var/log/kubernetes \
   --logtostderr=false \
   --authorization-mode=Node,RBAC \
-  --bind-address={{ansible_eth1.ipv4.address}} \
-  --bind-address=127.0.0.1 \
+#  --bind-address={{ansible_eth1.ipv4.address}} \
+  --bind-address=0.0.0.0 \
   --client-ca-file=/var/lib/kubernetes/ca.pem \
   --enable-admission-plugins=NamespaceLifecycle,NodeRestriction,LimitRanger,ServiceAccount,DefaultStorageClass,ResourceQuota \
   --etcd-cafile=/var/lib/kubernetes/ca.pem \
@@ -22,7 +23,7 @@ ExecStart=/usr/local/bin/kube-apiserver \
   --etcd-keyfile=/var/lib/kubernetes/kubernetes-key.pem \
   --etcd-servers=https://{{controllerIPs[0]}}:2379,https://{{controllerIPs[1]}}:2379,https://{{controllerIPs[2]}}:2379 \
   --event-ttl=1h \
-  --encryption-provider-config=/var/lib/kubernetes/encryption-config.yaml \
+  --experimental-encryption-provider-config=/var/lib/kubernetes/encryption-config.yaml \
   --kubelet-certificate-authority=/var/lib/kubernetes/ca.pem \
   --kubelet-client-certificate=/var/lib/kubernetes/kubernetes.pem \
   --kubelet-client-key=/var/lib/kubernetes/kubernetes-key.pem \
