--- a/ansible/templates/kubelet.service.j2
+++ b/ansible/templates/kubelet.service.j2
@@ -12,6 +12,7 @@ ExecStart=/usr/local/bin/kubelet \
   --image-pull-progress-deadline=2m \
   --kubeconfig=/var/lib/kubelet/kubeconfig \
   --network-plugin=cni \
+  --cni-bin-dir=/opt/cni/bin \
   --register-node=true \
   --v=2 \
   --hostname-override={{inventory_hostname}}.kubernetes.loc \
